# gpu-programming-project

./: .gitignore  README.md  abstract.txt  compile_windows_static.txt
app/: bvh.cuh  camera.cuh  cudaviewer.h  framebuffer.cuh  helper.cuh  main.cu  next_event_estimation.cuh  path_tracing.cuh  rapidobj.hpp  ray_tracing.cuh  scene.cuh  utils.cuh
app/scenes/: bmw.mtl  cornell_box.mtl  cornell_box_dragon.mtl  cornell_box_suzanne.mtl  sponza.mtl
app/scenes/blend/: cornell_box.blend  cornell_box_suzanne.blend
build-jetson-nano/: Dockerfile
cuda-viewer/: Cargo.toml  build.rs
cuda-viewer/src/: lib.rs
cuda-viewer/src/shaders/: buf_display.frag  buf_display.frag.spv  fs_quad.vert  fs_quad.vert.spv
cuda-viewer/src/viewer/: mod.rs  shaders.rs
report/: bibliography.bib  main.tex
