[package]
name = "cuda-viewer"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ash = { version = "0.37", features = ["loaded", "debug"] }
ash-window = "0.12"
raw-window-handle = "0.5"
winit = { version = "0.27", default-features = false, features = ["x11"] }
shaderc = { version = "0.8", optional = true }
colored = { version = "2.0", optional = true }

[target.'cfg(not(target_arch = "aarch64"))'.build-dependencies]
cbindgen = "0.24"

[features]
default = []
shaderc = ["dep:shaderc", "dep:colored"]
zero-copy-mem = []
wayland = ["winit/wayland"]
